cmake_minimum_required (VERSION 3.1)
enable_language(CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
include_directories("$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>")
project (f8fiber VERSION 1.0)
add_library(f8fiber STATIC ${CMAKE_SOURCE_DIR}/src/f8fiber.cpp ${CMAKE_SOURCE_DIR}/include/fix8/f8fiber.hpp)
add_executable(f8fibertest ${CMAKE_SOURCE_DIR}/examples/f8fibertest.cpp)
target_link_libraries(f8fibertest f8fiber)
add_executable(f8fibertest3 ${CMAKE_SOURCE_DIR}/examples/f8fibertest3.cpp)
target_link_libraries(f8fibertest3 f8fiber)
